# CrossPlatform-Vulkan-SDL3-Boilerplate

./: .gitignore  CMakeLists.txt
include/: GameCamera.h  GameInput.h  GeometryBase.h  GeometryBox.h  GeometryGrid.h  GeometryLine.h  GeometryQuad.h  VulkanCommand.h  VulkanGraphicsPipeline.h  VulkanSpecializationConstant.h
shaderBinary/: box.frag.spv  box.vert.spv  box0.frag.spv  box0.vert.spv  box1.frag.spv  box1.vert.spv  box2.frag.spv  box2.vert.spv
shaders/: .CompileO_Graphics.sh.swp  CompileO_Graphics.bat  CompileO_Graphics.sh  Global.comp  box0.frag  box0.vert  box1.frag  box1.vert  box2.frag  box2.vert  line.frag  line.vert
src/: GameCamera.cpp  GameInput.cpp  GeometryBox.cpp  GeometryGrid.cpp  GeometryLine.cpp  GeometryQuad.cpp  VulkanCommand.cpp  VulkanGraphicsPipeline.cpp  VulkanSpecializationConstant.cpp  main.cpp
